--- a/src/styles/global/globalStyles.scss
+++ b/src/styles/global/globalStyles.scss
@@ -6,7 +6,8 @@ body{
   line-height: 0.102em;
   color: #333;
   padding-top: 4.500em;
-  margin: 0px
+  margin: 0px;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 * {
