created mobile menu and open close animation

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,4 +31,5 @@
 /* Component Styles */
 @import './components/app';
 @import './components/navigation/header';
-@import './components/navigation/burger.scss';
+@import './components/navigation/burger';
+@import './components/navigation/mobileMenu';
