--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,3 +33,4 @@
 @import './components/navigation/header';
 @import './components/navigation/burger';
 @import './components/navigation/mobileMenu';
+@import './components/navigation/MobileMenuItem';
