--- a/src/styles/components/navigation/mobileMenuItem.scss
+++ b/src/styles/components/navigation/mobileMenuItem.scss
@@ -34,6 +34,16 @@
   font-weight: 400;
 }
 
+.fa-angle-left{
+  color: #dfeae8;
+  margin-right: 0.27em;
+  font-size: 2em;
+  position: absolute;
+  right: 0.714em;
+  top: 0.3em;
+  font-weight: 400;
+}
+
 #sLab{
   color: #31babc!important;
 }
