--- a/src/styles/components/navigation/mobileMenu.scss
+++ b/src/styles/components/navigation/mobileMenu.scss
@@ -34,12 +34,12 @@
   transform: translateX(-100%);
   -webkit-transform: translateX(-100%);
   -ms-transform: translateX(-100%);
-  transition: transform .2s linear,-webkit-transform .2s linear;
+  transition: transform .3s ease-in,-webkit-transform .3s ease-in;
 }
 
 .mobileMenuShow{
   transform: translateX(0);
   -webkit-transform: translateX(0);
   -ms-transform: translateX(0);
-  transition: transform .2s linear,-webkit-transform .2s linear
+  transition: transform .3s ease-out,-webkit-transform .3s ease-out
 }
