--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,4 +34,5 @@
 @import './components/navigation/burger';
 @import './components/navigation/mobileMenu';
 @import './components/navigation/MobileMenuSecoundLayer';
+@import './components/navigation/MobileMenuThirdLayer';
 @import './components/navigation/MobileMenuItem';
