--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,4 +35,5 @@
 @import './components/navigation/mobileMenu';
 @import './components/navigation/MobileMenuSecoundLayer';
 @import './components/navigation/MobileMenuThirdLayer';
+@import './components/navigation/mobileMenuSports';
 @import './components/navigation/MobileMenuItem';
