--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,8 +35,9 @@
 
 
 
-/* Component Styles */
+/* Global Styles */
 @import './global/globalStyles';
+@import './global/globalMediaQuerries';
 
 /* Component Styles */
 @import './components/app';
