--- a/src/styles/components/navigation/desktopMenu.scss
+++ b/src/styles/components/navigation/desktopMenu.scss
@@ -3,7 +3,7 @@
 #desktopMenu{
   box-sizing: border-box;
   width: 100%;
-  height: 15em;
+  height: auto;
   background-image: url('https://res.cloudinary.com/dblakenzcloud/image/upload/v1496636673/Salomon/broken_noise-pattern.png');
   border-top: 0.3em solid black;
   border-bottom: 0.3em solid #0ff;
@@ -13,7 +13,7 @@
 }
 
 .desktopMenuHide{
-  display: none !important;
+  display: block !important;
 }
 
 .desktopMenuShow{
