created desktop menu left hand side

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -55,3 +55,4 @@
 @import './components/navigation/desktopNavBar';
 @import './components/navigation/desktopMenu';
 @import './components/navigation/desktopMenuComponents/desktopMenuLeft';
+@import './components/navigation/desktopMenuComponents/desktopMenuImage';
