created desktop sports menu

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -56,3 +56,4 @@
 @import './components/navigation/desktopMenu';
 @import './components/navigation/desktopMenuComponents/desktopMenuLeft';
 @import './components/navigation/desktopMenuComponents/desktopMenuImage';
+@import './components/navigation/desktopMenuComponents/desktopMenuSports';
