--- a/src/styles/components/navigation/desktopMenu.scss
+++ b/src/styles/components/navigation/desktopMenu.scss
@@ -13,7 +13,8 @@
 }
 
 .desktopMenuHide{
-  display: none !important;
+  display: block !important;
+  // display: none !important;
 }
 
 .desktopMenuShow{
