completed desktop navigaion menu

--- a/src/styles/components/navigation/desktopMenu.scss
+++ b/src/styles/components/navigation/desktopMenu.scss
@@ -13,8 +13,7 @@
 }
 
 .desktopMenuHide{
-  display: block !important;
-  // display: none !important;
+  display: none !important;
 }
 
 .desktopMenuShow{
