--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -55,5 +55,6 @@
 @import './components/navigation/desktopNavBar';
 @import './components/navigation/desktopMenu';
 @import './components/navigation/desktopMenuComponents/desktopMenuLeft';
+@import './components/navigation/desktopMenuComponents/desktopMenuRight';
 @import './components/navigation/desktopMenuComponents/desktopMenuImage';
 @import './components/navigation/desktopMenuComponents/desktopMenuSports';
