--- a/src/styles/components/homepage/homepage.scss
+++ b/src/styles/components/homepage/homepage.scss
@@ -9,6 +9,16 @@
 
 #homepage-wrapper{
   border: 1px solid red;
-  background-color: gray;
-  height: 100vh;
+}
+
+.carousel-container{
+  border: 1px solid green;
+  width: 100%;
+  padding: 3em;
+}
+
+.item{
+  height: 10em;
+  width: 10em;
+  background-color: blue;
 }
