created slider component with image. loops through the 3 of them

--- a/src/styles/components/homepage/homepage.scss
+++ b/src/styles/components/homepage/homepage.scss
@@ -8,17 +8,5 @@
 }
 
 #homepage-wrapper{
-  border: 1px solid red;
-}
-
-.carousel-container{
-  border: 1px solid green;
-  width: 100%;
-  padding: 3em;
-}
-
-.item{
-  height: 10em;
-  width: 10em;
-  background-color: blue;
+  background-image: url(https://res.cloudinary.com/dblakenzcloud/image/upload/v1496636673/Salomon/broken_noise-pattern.png);
 }
