--- a/src/styles/components/homepage/carousel/carousel.scss
+++ b/src/styles/components/homepage/carousel/carousel.scss
@@ -1,7 +1,23 @@
 // main: ../../../main.scss
+@media (min-width: 480px) {
 
-@media (min-width: 961px) {
+}
+@media (min-width: 768px) {
 
+  .carouselHeading{
+      font-size: 2.500em !important;
+  }
+
+  .carouselParagraphText{
+    display: block !important;
+  }
+}
+
+@media (min-width: 1024px) {
+  .carouselHeading{
+    margin-bottom: 1.071em;
+    font-size: 3.929em !important;
+  }
 }
 
 .carouselItemWrapper{
@@ -33,6 +49,10 @@
     margin: 0em 2em 0em 0.5em;
     position: relative;
     top: 0.05em;
+
+      &:last-child{
+        margin-right: 0em;
+      }
   }
 }
 
@@ -50,11 +70,19 @@
 
 .carouselHeading{
   font-family: 'FuturaBT-Medium';
-  letter-spacing: 0.05em;
   text-transform: uppercase;
   font-size: 1.4em;
   line-height: 1em;
   margin: 0em 0em 0.714em 0em;
+}
+
+.carouselParagraphText{
+  display: none;
+  width: 28.214em;
+  font-family: 'Futura-Book';
+  font-size: 1em;
+  line-height: 1.429em;
+  margin-bottom: 1.4em;
 }
 
 .carouselCtaText{
