--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,6 +44,7 @@
 
 @import './components/homepage/homepage';
 @import './components/homepage/carousel/carousel';
+@import './components/homepage/carousel/carouselThumbnails';
 
 @import './components/navigation/header';
 @import './components/navigation/burger';
