--- a/src/styles/components/homepage/homepage.scss
+++ b/src/styles/components/homepage/homepage.scss
@@ -7,6 +7,33 @@
   }
 }
 
-#homepage-wrapper{
-  background-image: url(https://res.cloudinary.com/dblakenzcloud/image/upload/v1496636673/Salomon/broken_noise-pattern.png);
+.section-container{
+  padding: 1em 0.8em 1em 0.8em;
+}
+
+.dark-section{
+  color: white;
+    background-image: url(https://res.cloudinary.com/dblakenzcloud/image/upload/v1496636673/Salomon/broken_noise-pattern.png);
+}
+
+.homepageSectionHeader{
+  position: relative;
+  font-family: 'FuturaBT-MediumCondensed';
+  font-size: 2.1em;
+  letter-spacing: 0.1em;
+  line-height: 2.1em;
+  text-align: center;
+  text-transform: uppercase;
+  margin: 0 0 1.7em 0;
+
+  &:before{
+    background-color: white;
+    content: '';
+    width: 1em;
+    height: 0.1em;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    margin-left: -0.5em;
+  }
 }
