created new styles components and render image and product name

--- a/src/styles/components/homepage/newStyles/newStyles.scss
+++ b/src/styles/components/homepage/newStyles/newStyles.scss
@@ -3,3 +3,28 @@
 #newStylesWrapper{
 
 }
+
+.newStylesItemContainer{
+  width: 100%;
+  border: 1px solid black;
+  margin-bottom: 2em;
+  padding: 30px 50px;
+  background-color: #F8F8F8;
+
+  & p {
+    font-family: 'FuturaBT-MediumCondensed';
+    color: #878787;
+    font-size: 1.3em;
+    line-height: 1.3em;
+    letter-spacing: 0.1em;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 0;
+  }
+}
+
+.newStylesImage{
+  display: block;
+  margin: auto;
+  max-width: 250px;
+}
