--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -61,3 +61,4 @@
 @import './components/homepage/carousel/carousel';
 @import './components/homepage/carousel/carouselThumbnails';
 @import './components/homepage/newStyles/newStyles';
+@import './components/homepage/leStoryboard/leStoryboard';
