--- a/src/styles/components/homepage/newStyles/newStyles.scss
+++ b/src/styles/components/homepage/newStyles/newStyles.scss
@@ -8,14 +8,18 @@
 
   .newStylesImage{
     width: 50%;
+    margin: auto 0em !important;
   }
 
-  .newStylesItemContainer{
+  .newStylesTextWraper{
+    display: inline-block;
+    width: 50%;
+    text-align: center;
+    position: absolute;
+    bottom: 45%;
+    transform: translateY(-45%);
     & p {
-      display: inline-block !important;
-      width: 50%;
-      position: relative;
-      bottom: 4.5em;
+      width: 100%;
     }
   }
 }
@@ -33,17 +37,19 @@
   .newStylesImage{
     display: block !important;
     position: relative;
+    bottom: 1em;
     width: 100%;
     margin: 0px auto !important;
-    padding-top:2em;
+    padding:1em;
   }
 
 
   .newStylesItemContainer{
-    display: inline-block !important;
+    position: relative;
     max-width: 33.33333333% !important;
     height: 28.571em;
     margin: 0em !important;
+    padding: 1em 2em !important;
 
     &:nth-child(2){
       margin: 0em 1em !important;
@@ -56,10 +62,9 @@
   }
 
   .newStylesTextWraper{
-    width: 100%;
     position: absolute;
-    bottom: 2em;
-    right: 0em;
+    left: 25%;
+    bottom: 0%;
   }
 }
 
@@ -77,6 +82,7 @@
 .newStylesItemContainer{
   position: relative;
   width: 100%;
+  height: 100%;
   margin-bottom: 2em;
   padding: 30px 50px;
   background-color: #F8F8F8;
