--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -62,3 +62,4 @@
 @import './components/homepage/carousel/carouselThumbnails';
 @import './components/homepage/newStyles/newStyles';
 @import './components/homepage/leStoryboard/leStoryboard';
+@import './components/homepage/community/community';
