creates 4 community blocks and images

--- a/src/styles/components/homepage/community/community.scss
+++ b/src/styles/components/homepage/community/community.scss
@@ -21,6 +21,9 @@
 .communityBoardItem{
   height: 16.714em;
   width: 16.714em;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .socialItem{
