created mobile made for you section with styles

--- a/src/styles/components/homepage/homepage.scss
+++ b/src/styles/components/homepage/homepage.scss
@@ -21,6 +21,11 @@
   background-color: #1d1d1d;
 }
 
+.white-section{
+  color: black;
+  background-color: white;
+}
+
 .homepageSectionHeader{
   position: relative;
   font-family: 'FuturaBT-MediumCondensed';
@@ -44,7 +49,7 @@
 }
 
 .homepageSectionSubtitle{
-  font-family: 'FuturaBT-Medium';
+  font-family: 'Futura-Book';
   position: relative;
   font-size: 1.2em;
   line-height: 1.2em;
