--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -61,4 +61,6 @@
 @import './components/homepage/newStyles/newStyles';
 @import './components/homepage/leStoryboard/leStoryboard';
 @import './components/homepage/community/community';
-@import './components/homepage/madeForYou/madeForYou'
+@import './components/homepage/madeForYou/madeForYou';
+
+@import './components/footer/footer';
