--- a/src/styles/components/footer/footer.scss
+++ b/src/styles/components/footer/footer.scss
@@ -31,57 +31,40 @@
   }
 }
 
-.emailContainer{
-  width: 100%;
-  max-width: 58.5em;
+.footerCol{
+  border: 1px solid white;
+  width: 50%;
+  margin-top: 1.2em;
+  float: left;
+  position: relative;
   padding: 0em 1em;
-  margin: 0px auto;
-
-  & p {
-    float: left;
-    font-family: 'FuturaBT-MediumCondensed';
-    color: #31babc;
-    text-transform: uppercase;
-    font-size: 1.6em;
-    letter-spacing: 0.05em;
-    line-height: 1.2em;
-    margin: 0 0 1em 0;
-    padding: 0 0.7em;
-    display: inline-block;
-  }
-}
-
-.emailForm{
-  padding: 0 1em;
-  display: inline-block;
-}
-
-#emailInput{
-  font-family: 'FuturaBT-MediumCondensed';
-  font-size: 1.1em;
-  line-height: 1.1em;
-  width: 14em;
-  height: 2.8em;
-  padding: 0 0 0 0.7em;
-  vertical-align: middle;
-}
-
-#emailButton{
-  background-color: #434343;
   font-size: 1em;
-  vertical-align: middle;
-  height: 3.1em;
-  border: 0em;
-  margin-left: 0.2em;
+  line-height: 1em;
+  color: #dfeae8;
+  font-family: 'FuturaCondRegular';
 
-  & :hover{
-    cursor: pointer;
+  & h3 {
+    font-size: 1.2em;
+    letter-spacing: 0.07em;
+    text-transform: uppercase;
+    margin-bottom: 1em;
   }
 
-    .fa-long-arrow-right{
-      color: white;
-      font-size: 1.5em;
-      line-height: 0.2em;
-      padding: 0em;
-    }
+  & ul{
+    margin: 0em;
+    padding: 0em;
+  }
+
+  & li{
+    font-family: 'FuturaCondRegular';
+    font-size: 1.05em;
+    line-height: 1.3em;
+  }
+}
+
+.footerSocial{
+  display: inline-block;
+  color: #31babc;
+  font-size: 1.7em!important;
+  width: 25%;
 }
