--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -64,3 +64,4 @@
 @import './components/homepage/madeForYou/madeForYou';
 
 @import './components/footer/footer';
+@import './components/footer/email';
