--- a/src/styles/components/footer/footer.scss
+++ b/src/styles/components/footer/footer.scss
@@ -9,16 +9,22 @@
   }
 }
 
-
+@media screen and (min-width: 800px){
+  .footerCol{
+    width: 25% !important;
+      margin-top: 1.2em;
+  }
+}
 
 
 #footer-section{
   padding-top: 3.5em;
+  padding-bottom: 0em;
 }
 .footerWrapper{
   position: relative;
   overflow: auto;
-  max-width: 1440px;
+  max-width: 800px;
   margin: 0px auto;
 }
 
@@ -32,9 +38,8 @@
 }
 
 .footerCol{
-  border: 1px solid white;
+  min-height: 10em;
   width: 50%;
-  margin-top: 1.2em;
   float: left;
   position: relative;
   padding: 0em 1em;
@@ -59,6 +64,11 @@
     font-family: 'FuturaCondRegular';
     font-size: 1.05em;
     line-height: 1.3em;
+    &:hover{
+      color: #31babc;
+      cursor: pointer;
+    }
+
   }
 }
 
@@ -67,4 +77,18 @@
   color: #31babc;
   font-size: 1.7em!important;
   width: 25%;
+
+  &:hover{
+    color: #00FFFF !important;
+    cursor: pointer;
+  }
+}
+
+#legalSection{
+  background-color: #1C1C1C;
+  color: #dfeae8;
+  text-align: center;
+  line-height: 1em;
+  padding: 0.8em 0em;
+  margin: 3em -1em 0 -1em;
 }
